--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "jwt-decode": "^3.1.2",
     "mongoose": "^6.2.9",
     "nodemon": "^2.0.15",
+    "pupeteer": "^0.0.1",
+    "puppeteer": "^13.5.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^6.2.2",
